Fixed some issues with the fonts sizes and the inner spacing

--- a/src/sass/components/_posts-lists.scss
+++ b/src/sass/components/_posts-lists.scss
@@ -1,17 +1,15 @@
 @use '../abstracts' as *;
 
 .posts-list {
+  padding-top: 1.5em;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   gap: 10%;
 
-  li {
-    margin-bottom: 1.5rem;
-  }
-
-  h4 {
+  h3 {
     a {
+      font-size: inherit;
       border-bottom: 2px dashed $neon-blue;
     }
   }
@@ -19,18 +17,25 @@
   p {
     margin-bottom: 0.5rem;
   }
+  .post {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    margin-bottom: 1.5rem;
+  }
 
   .post-info {
+    padding: 1em 0 0.5em 0;
     margin-bottom: 1.25rem;
   }
 
   .read-more {
-    position: relative;
-    top: -0.75em;
     color: $neon-blue;
+    margin-top: 1rem;
+    text-decoration: red;
 
-    a:hover {
-      border-bottom: 2px dashed $neon-blue;
-    }
+    // &:hover {
+    //   border-bottom: 2px dashed $neon-blue;
+    // }
   }
 }
